[package]
name = "pipe-channel"
version = "1.4.0"
edition = "2018"
authors = ["Sergey Bugaev <bugaevc@gmail.com>"]
license = "MIT"

description = "Channel implementation based on pipes"
keywords = ["pipe", "channel"]

documentation = "https://docs.rs/pipe-channel/"
repository = "https://github.com/bugaevc/pipe-channel"

[dependencies]
nix = { version = "0.29.0", optional = true, features = ["fs"] }
libc = { version = "0.2.66", optional = true }
rustix = { version = "0.38.39", optional = true, features = ["pipe"] }

[features]
default = ["nix"]
nix = ["dep:nix", "dep:libc"]
rustix = ["dep:rustix"]
